--- a/To-Do-List/To-Do-List/Base.lproj/Main.storyboard
+++ b/To-Do-List/To-Do-List/Base.lproj/Main.storyboard
@@ -6,10 +6,10 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Stats View Controller-->
         <scene sceneID="DHM-6z-40p">
             <objects>
-                <viewController id="RTL-ac-ESt" sceneMemberID="viewController">
+                <viewController id="RTL-ac-ESt" customClass="StatsViewController" customModule="To_Do_List" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="tDc-rq-bvf"/>
                         <viewControllerLayoutGuide type="bottom" id="mfB-Q8-aMb"/>
@@ -70,6 +70,9 @@
                             <constraint firstItem="xkT-AB-5hh" firstAttribute="top" secondItem="jEb-JU-yxS" secondAttribute="bottom" constant="8" symbolic="YES" id="qeZ-O5-ZaK"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="countNumberLabel" destination="jEb-JU-yxS" id="Ybc-JZ-Xrf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fNo-v5-weC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -84,43 +87,44 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ToDoCell" rowHeight="71" id="yvZ-Ao-QYo" customClass="ToDoListTableViewCell" customModule="To_Do_List" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="600" height="71"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoCell" rowHeight="71" id="yvZ-Ao-QYo" customClass="ToDoListTableViewCell" customModule="To_Do_List" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="600" height="71"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yvZ-Ao-QYo" id="Fwg-MZ-TLG">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="70.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="unchecked" translatesAutoresizingMaskIntoConstraints="NO" id="JQz-Mj-PmA">
+                                            <rect key="frame" x="8" y="21" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="H1L-PC-3YE"/>
+                                                <constraint firstAttribute="height" constant="30" id="UgC-AJ-m2f"/>
+                                            </constraints>
+                                        </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Temporary Task" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CKZ-Lo-tcb">
-                                            <rect key="frame" x="8" y="25.5" width="477" height="20.5"/>
+                                            <rect key="frame" x="46" y="19.5" width="546" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="unchecked" translatesAutoresizingMaskIntoConstraints="NO" id="JQz-Mj-PmA">
-                                            <rect key="frame" x="562" y="21" width="30" height="30"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="30" id="Ee4-MO-xTL"/>
-                                                <constraint firstAttribute="height" constant="30" id="J48-nf-Fem"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Wed 12/3" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="avH-du-C0P">
-                                            <rect key="frame" x="493" y="27" width="61" height="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Wed 12/3" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="avH-du-C0P">
+                                            <rect key="frame" x="46" y="40" width="546" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="avH-du-C0P" firstAttribute="leading" secondItem="CKZ-Lo-tcb" secondAttribute="trailing" constant="8" symbolic="YES" id="CxQ-C8-Gxg"/>
-                                        <constraint firstAttribute="leadingMargin" secondItem="CKZ-Lo-tcb" secondAttribute="leading" id="EMH-VQ-9wc"/>
                                         <constraint firstItem="JQz-Mj-PmA" firstAttribute="top" secondItem="Fwg-MZ-TLG" secondAttribute="topMargin" constant="3" id="H3H-tR-CJe"/>
-                                        <constraint firstItem="CKZ-Lo-tcb" firstAttribute="centerY" secondItem="Fwg-MZ-TLG" secondAttribute="centerY" id="O4h-wT-c4s"/>
+                                        <constraint firstItem="avH-du-C0P" firstAttribute="leading" secondItem="JQz-Mj-PmA" secondAttribute="trailing" constant="8" symbolic="YES" id="Lhb-16-yhd"/>
+                                        <constraint firstItem="avH-du-C0P" firstAttribute="top" secondItem="CKZ-Lo-tcb" secondAttribute="bottom" id="PMv-Uj-gRW"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="JQz-Mj-PmA" secondAttribute="bottom" constant="2" id="RR9-69-2Xv"/>
-                                        <constraint firstItem="JQz-Mj-PmA" firstAttribute="leading" secondItem="avH-du-C0P" secondAttribute="trailing" constant="8" symbolic="YES" id="Y6n-IT-t4a"/>
-                                        <constraint firstItem="JQz-Mj-PmA" firstAttribute="centerY" secondItem="Fwg-MZ-TLG" secondAttribute="centerY" id="dkU-Y6-eVL"/>
-                                        <constraint firstItem="JQz-Mj-PmA" firstAttribute="centerY" secondItem="avH-du-C0P" secondAttribute="centerY" id="fLp-5l-dB9"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="JQz-Mj-PmA" secondAttribute="trailing" id="g0Q-Gz-8VU"/>
+                                        <constraint firstAttribute="leadingMargin" secondItem="JQz-Mj-PmA" secondAttribute="leading" id="VCd-PO-iMI"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="avH-du-C0P" secondAttribute="trailing" id="aMr-vS-BIZ"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="CKZ-Lo-tcb" secondAttribute="trailing" id="irU-KX-pf0"/>
+                                        <constraint firstItem="CKZ-Lo-tcb" firstAttribute="leading" secondItem="JQz-Mj-PmA" secondAttribute="trailing" constant="8" symbolic="YES" id="mM7-Og-hHq"/>
+                                        <constraint firstItem="JQz-Mj-PmA" firstAttribute="centerY" secondItem="Fwg-MZ-TLG" secondAttribute="centerY" id="rCb-Sj-QPZ"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="avH-du-C0P" secondAttribute="bottom" constant="5.5" id="wBw-Kz-iTv"/>
                                     </constraints>
                                     <variation key="default">
                                         <mask key="constraints">
@@ -214,7 +218,6 @@
                                 <state key="normal" title="Save Icon"/>
                                 <connections>
                                     <action selector="saveIconButton:" destination="Bxs-Ao-OMS" eventType="touchUpInside" id="kJT-wg-Qjv"/>
-                                    <segue destination="GnI-t9-wah" kind="show" id="xBd-av-UUw"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -235,6 +238,7 @@
                     <connections>
                         <outlet property="dateTextField" destination="hmi-0U-eXJ" id="K68-lc-wsf"/>
                         <outlet property="taskTextField" destination="zXs-bX-aML" id="yxK-LL-2xK"/>
+                        <segue destination="NDQ-wB-Ptr" kind="show" identifier="addToMain" id="pva-Wf-7Hi"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gdj-eq-EcK" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -263,7 +267,4 @@
     <resources>
         <image name="unchecked" width="50" height="50"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="xBd-av-UUw"/>
-    </inferredMetricsTieBreakers>
 </document>
