--- a/To-Do-List/To-Do-List/Base.lproj/Main.storyboard
+++ b/To-Do-List/To-Do-List/Base.lproj/Main.storyboard
@@ -175,7 +175,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zXs-bX-aML">
-                                <rect key="frame" x="157" y="191" width="286" height="30"/>
+                                <rect key="frame" x="157" y="101" width="286" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="286" id="bAh-cU-C9x"/>
                                 </constraints>
@@ -183,7 +183,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Wed 3/15" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hmi-0U-eXJ">
-                                <rect key="frame" x="252" y="258" width="97" height="30"/>
+                                <rect key="frame" x="252" y="168" width="97" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="97" id="I9A-NQ-UPM"/>
                                 </constraints>
@@ -191,7 +191,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Task Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gqM-MU-O7A">
-                                <rect key="frame" x="258" y="162" width="85" height="21"/>
+                                <rect key="frame" x="258" y="72" width="85" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="drw-ci-YZu"/>
                                 </constraints>
@@ -200,7 +200,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I4T-4a-fh7">
-                                <rect key="frame" x="282" y="229" width="36" height="21"/>
+                                <rect key="frame" x="282" y="139" width="36" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="DWL-b6-B22"/>
                                 </constraints>
@@ -209,7 +209,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RlJ-kQ-4XR">
-                                <rect key="frame" x="238" y="296" width="124" height="30"/>
+                                <rect key="frame" x="238" y="206" width="124" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="4tM-LQ-lfE"/>
                                     <constraint firstAttribute="width" constant="124" id="h7q-mH-7Zm"/>
@@ -227,7 +227,7 @@
                             <constraint firstItem="hmi-0U-eXJ" firstAttribute="centerX" secondItem="RlJ-kQ-4XR" secondAttribute="centerX" id="1O0-99-MkD"/>
                             <constraint firstItem="I4T-4a-fh7" firstAttribute="centerX" secondItem="kFd-nk-geo" secondAttribute="centerX" id="1ab-Cp-evt"/>
                             <constraint firstItem="I4T-4a-fh7" firstAttribute="top" secondItem="zXs-bX-aML" secondAttribute="bottom" constant="8" symbolic="YES" id="AxR-jN-kza"/>
-                            <constraint firstItem="gqM-MU-O7A" firstAttribute="top" secondItem="rMb-mk-CV4" secondAttribute="bottom" constant="142" id="HY4-50-ypN"/>
+                            <constraint firstItem="gqM-MU-O7A" firstAttribute="top" secondItem="rMb-mk-CV4" secondAttribute="bottom" constant="8" symbolic="YES" id="HY4-50-ypN"/>
                             <constraint firstItem="RlJ-kQ-4XR" firstAttribute="top" secondItem="hmi-0U-eXJ" secondAttribute="bottom" constant="8" symbolic="YES" id="UwX-Mq-SAk"/>
                             <constraint firstItem="zXs-bX-aML" firstAttribute="centerX" secondItem="gqM-MU-O7A" secondAttribute="centerX" id="Zsx-WY-mtQ"/>
                             <constraint firstItem="zXs-bX-aML" firstAttribute="centerX" secondItem="I4T-4a-fh7" secondAttribute="centerX" id="bHE-hn-0Ve"/>
