24 Hour Auto-Deletion now working

--- a/To-Do-List/To-Do-List/Base.lproj/Main.storyboard
+++ b/To-Do-List/To-Do-List/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jEb-JU-yxS">
-                                <rect key="frame" x="190" y="169" width="221" height="193"/>
+                                <rect key="frame" x="190" y="171" width="221" height="189"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="221" id="pwA-Gz-ZUQ"/>
                                 </constraints>
@@ -60,14 +60,14 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="jEb-JU-yxS" firstAttribute="centerX" secondItem="wIo-Hn-uSb" secondAttribute="centerX" id="3h5-oo-wlU"/>
-                            <constraint firstItem="jEb-JU-yxS" firstAttribute="top" secondItem="wIo-Hn-uSb" secondAttribute="bottom" constant="8" symbolic="YES" id="6pZ-cm-0w9"/>
+                            <constraint firstItem="jEb-JU-yxS" firstAttribute="top" secondItem="wIo-Hn-uSb" secondAttribute="bottom" constant="10" id="6pZ-cm-0w9"/>
                             <constraint firstItem="wIo-Hn-uSb" firstAttribute="top" secondItem="peA-rj-YMQ" secondAttribute="bottom" constant="8" symbolic="YES" id="KB5-Zw-Y0I"/>
                             <constraint firstItem="mfB-Q8-aMb" firstAttribute="top" secondItem="xkT-AB-5hh" secondAttribute="bottom" constant="209" id="KXC-Tc-AEx"/>
                             <constraint firstItem="peA-rj-YMQ" firstAttribute="top" secondItem="tDc-rq-bvf" secondAttribute="bottom" constant="8" symbolic="YES" id="Nbt-8J-bfQ"/>
                             <constraint firstItem="xkT-AB-5hh" firstAttribute="centerX" secondItem="jEb-JU-yxS" secondAttribute="centerX" id="PqT-yC-3B9"/>
                             <constraint firstItem="peA-rj-YMQ" firstAttribute="centerX" secondItem="wIo-Hn-uSb" secondAttribute="centerX" id="hRN-JM-vX7"/>
                             <constraint firstItem="wIo-Hn-uSb" firstAttribute="centerX" secondItem="UfS-QU-HTh" secondAttribute="centerX" id="ld6-Fk-gRM"/>
-                            <constraint firstItem="xkT-AB-5hh" firstAttribute="top" secondItem="jEb-JU-yxS" secondAttribute="bottom" constant="8" symbolic="YES" id="qeZ-O5-ZaK"/>
+                            <constraint firstItem="xkT-AB-5hh" firstAttribute="top" secondItem="jEb-JU-yxS" secondAttribute="bottom" constant="10" id="qeZ-O5-ZaK"/>
                         </constraints>
                     </view>
                     <connections>
@@ -250,9 +250,10 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NDQ-wB-Ptr" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2me-gs-aaj">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="2me-gs-aaj">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
